[package]
name = "clave"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 's'

[dependencies]
rpassword = "7.2"
chacha20 = "0.7.2"
sha3 = "0.10.8"
clap = "2.33.3"
thiserror = "1"

[dev-dependencies]
file_diff = "1.0.0"
